--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,10 @@
+html, body{
+  width: 100%;
+  height: 100%;
+}
+
 body {
+  background-color: rgba(206, 139, 14, 0.74);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +13,4 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
