--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,13 +1,54 @@
 .header {
-    width: 100%;
-    display: flex;
-    
-    padding:20px;
+  width: 100%;
+  padding: 20px;
+  margin: 0 auto;
+}
 
-    .search-field {
-        font-size: 2rem;
-        font-weight: bold;
-        border: none;
-        outline: none
-    }
+.header-content {
+    margin: 0 auto;
+    
+    width: 40%;
+    
+    
+  img {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+.header-input {
+  border-bottom: 1px solid lightgray;
+  margin: 0 auto;
+  width: 50%;
+  padding-top: 20px;
+}
+
+.header-icon{
+    width:50px;
+    height:50px;
+    float:left;
+    border: 1px solid lightgray;
+    border-radius: 100%;
+    padding: 15px;
+}
+
+.search-field {
+  font-size: 2rem;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  
+}
+
+.min-price {
+    margin: 0 auto;
+    width:200px;
+    border: 1px solid lightgray;
+    height: 40px;
+    border-radius: 30px;
+    margin-top: 30px;
+    color: gray;
+    text-align: center;
+    outline: none;
+    
 }
