--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -25,11 +25,12 @@
 .sidebar-wrapper {
     height:60px;
     margin-bottom: 40px;
+    width:350px;
     
 }
 .sidebar-text {
     height: 40px;
-    width: 250px;
+    width: 200px;
     float:left;
 }
 
@@ -51,18 +52,16 @@
     text-align: center;
 }
 
-.buttom-more {
-    float:left;
-    background-color: gray;
-    width:8px;
-    height:8px;
-    margin-left:5px;
-    border-radius: 100%;
-    
-}
 
 .my-button {
     
     width:20px;
     height:20px;
+}
+
+.sidebar-button img {
+    width:10px;
+    height: 10px;
+    float: left;
+    margin-top:20px;
 }
