--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 .App {
   background-color: white;
-  
-  width:80%;
+  padding: 30px;
+  width: 80%;
   border-radius: 30px;
   margin: 100px auto;
 }
