--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -65,3 +65,10 @@
     float: left;
     margin-top:20px;
 }
+
+.not-display-hotel {
+    display: none;
+}
+.display-hotel {
+    display: block;
+}
